--- a/assets/config.json
+++ b/assets/config.json
@@ -12,8 +12,8 @@
     "templates/**/*.php",
     "src/**/*.php"
   ],
-  "publicPath": "/app/themes/sage",
-  "devUrl": "http://example.dev",
+  "publicPath": "/wp-content/themes/sage",
+  "devUrl": "http://pgi.dev",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]"
 }
