--- a/assets/config.json
+++ b/assets/config.json
@@ -12,7 +12,7 @@
     "templates/**/*.php",
     "src/**/*.php"
   ],
-  "publicPath": "/wp-content/themes/sage",
+  "publicPath": "/wp-content/themes/pgi_2017",
   "devUrl": "http://pgi.dev",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
